# optimum-neuron

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  UPGRADE_PLAN.md  clear-history.sh  complete_type_modernization.py  configuration.yaml  connect.sh  ie_dump.csv  install_neuron.sh  kill_on_neuron.sh  multiple_node.sh  parallel_cluster.sh  push_to_hub.sh  pyproject.toml  qwen3-embedding-4b_configs.json  qwen3-embedding-8b_configs.json  setup.cfg  setup.py  sft_lora_finetune_llm_compile.sh  show_hlo.py  sync.sh  synchronize.py  test.json  test_custom_modeling.py  test_custom_modeling.sh  test_modeling.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: build-ami.yml  build-neuronx-tgi.yml  build-vllm-image.yml  cache_diffusion.yml  cache_llm.yml  check_code_quality.yml  cleanup_inf2_cache.yml  doc-build.yml  doc-pr-build.yml  doc-pr-upload.yml  inf2_integration_tests.yml  inference_cache.yml  inference_cache_diffusion.yml  inference_cache_llm.yml  inference_cache_stable_diffusion.yml  precompile_tests.yml  prepare_cache.yml  security.yml  stale.yaml  test_common.yml  test_cpu_compilation.yml  test_cpu_lookup.yml  test_cpu_only.yml  test_ecr_list_tags.yml  test_examples_on_trainium.yml  test_inf1.yml  test_inf1_cli.yml  test_inf1_export.yml  test_inf1_full_export.yml  test_inf1_inference.yml  test_inf1_pipelines.yml  test_inf2.yml  test_inf2_cli.yml  test_inf2_diffusers.yml  test_inf2_export.yml  test_inf2_full_export.yml  test_inf2_inference.yml  test_inf2_llm.yml  test_inf2_sanity.yml  test_inf2_seq2seq.yml  (+11 more)
aws-ami-creation/hcl2-files/: build.pkr.hcl  packer.pkr.hcl  sources.pkr.hcl  variables.pkr.hcl
aws-ami-creation/scripts/: install_huggingface_libraries.sh  validate_neuron_exist.sh
aws-examples/: README.md
aws-examples/mistral-e2e/: chat.py  compile.py  dataset.py  hfon.yaml  test.py  train.sh
benchmark/attention/: benchmark_attention_kernels.py  nki_flash_attn.py
benchmark/text-generation/: README.md  benchmark.py  gen_barcharts.py  llama2-13b.py  llama2-7b.py  llama2.py  llama3-8b.py  mistralv2.py  perplexity.py
benchmark/text-generation-inference/: README.md  benchmark.sh  docker-compose.yaml  generate_csv.py  run_all.sh  tgi_live_metrics.py
benchmark/vllm/: README.md  accuracy.sh  benchmark.sh  embedding_perf.py  embedding_perf.sh  generate_csv.py  memory_capacity_analysis.md  performance.sh  serve.sh
docker/vllm/: Dockerfile
docs/: README.md
docs/source/: _toctree.yml  cache_system.mdx  containers.mdx  ec2-setup.mdx  getting-started-on-ec2.mdx  getting-started.mdx  index.mdx  installation.mdx  quickstart.mdx  supported_architectures.mdx
examples/: README.md
examples/audio-classification/: requirements.txt  run_audio_classification.py
examples/causal-lm/: run_clm.py
examples/image-classification/: _run_image_classification.py  requirements.txt  run_image_classification.py
examples/language-modeling/: _run_clm.py  requirements.txt  run_clm.py  run_mlm.py
examples/mistral-e2e/: hfon.yaml
examples/multiple-choice/: _run_swag.py  requirements.txt  run_swag.py
examples/nxd/: README.md  bert_nxd.py  llama_inference.py  log-neuron-cc.txt  modeling_decoder.py  runner.py  test_nki.py
examples/question-answering/: _run_qa.py  requirements.txt  run_qa.py  run_seq2seq_qa.py  trainer_qa.py  trainer_seq2seq_qa.py  utils_qa.py
examples/speech-recognition/: requirements.txt  run_speech_recognition_ctc.py  run_speech_recognition_ctc_adapter.py  run_speech_recognition_seq2seq.py
examples/summarization/: requirements.txt  run_summarization.py
examples/text-classification/: _run_xnli.py  requirements.txt  run_classification.py  run_glue.py  run_xnli.py
examples/text-generation/: generation.py  run_generation.py
examples/token-classification/: _run_ner.py  requirements.txt  run_ner.py
examples/translation/: requirements.txt  run_translation.py
infrastructure/ami/: README.md
notebooks/: README.md
notebooks/feature-extraction/: qwen_embedding.ipynb
notebooks/ie/: compare-book-translations.ipynb
notebooks/sagemaker/: deploy-embedding.ipynb  deploy-llama-3-3-70b.ipynb  deploy-mixtral-8x7b.ipynb  deploy-sdxl.ipynb
notebooks/sentence-transformers/: getting-started.ipynb
notebooks/stable-diffusion/: log-neuron-cc.txt  sdxl-img2img.ipynb  sdxl-inpaint.ipynb  sdxl-txt2img.ipynb  stable-diffusion-img2img.ipynb  stable-diffusion-inpaint.ipynb  stable-diffusion-txt2img.ipynb  stable-diffusion-xl-txt2img.ipynb
notebooks/text-classification/: fine_tune_bert.ipynb  notebook.ipynb
notebooks/text-generation/: CodeLlama-7B-Compilation.ipynb  (+5 more)
nxd_example/: config.py  hello_world_xla_builder.py  model.py  readme.md  run.py  tokenizer.py
tests/: AGENTS.md  __init__.py  conftest.py  distributed_utils.py  helpers.py  synchronize_with_cache_repo_for_ci.py  test_cache_utils.py  test_compilation_utils.py  test_distributed_utils.py  test_examples.py  test_export.py  test_generate.py  test_modeling.py  test_modeling_decoder.py  test_peft.py  test_runner.py  test_trainer_callback.py  test_trainers.py  test_utils.py  utils.py
text-generation-inference/: Cargo.toml  Dockerfile  README.md  sagemaker-entrypoint.sh  tgi-entrypoint.sh  tgi_env.py
text-generation-inference/server/: Makefile  build-requirements.txt  pyproject.toml
text-generation-inference/server/text_generation_server/: cli.py  generator.py  interceptor.py  model.py  server.py
tools/: auto_fill_inference_cache.py  auto_fill_neuron_cache.py  auto_fill_neuronx_inference_cache.py  auto_fill_stable_diffusion_cache.py  cache_model_for_inference.py  check-neuron-ie.py  create_examples_from_transformers.py  decode_hlos.py  generate_model_doc.py  ie_models.json  list-ecr-images.py  list_top_models.py  make_examples_run_both_precompilation_and_training.py  prune_test_models.py  stable_diffusion.json  stale.py
training-script/: sft_finetuning_example.py  sft_finetuning_example.sh
validate_model/: model_runner.py  runner.py  validate.py
(+879 files in other folders)
